Feat: add MyPlaces (Places, Favorites), Toolbar, Zentrierbutton, Suchbutton

--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -6,12 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".FindFriendsActivity">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Search..."
+        android:id="@+id/search_users"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/find_friends_recycler_list"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true">
+        android:layout_below="@id/search_users">
     </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
