--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,23 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/map_24"
+        android:title="Find Places" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_myplaces"
+        android:icon="@drawable/place_24"
+        android:title="My Places" />
+
+    <item
+        android:id="@+id/navigation_messaging"
+        android:icon="@drawable/post_office_24"
+        android:title="Messaging" />
+
 
     <item
         android:id="@+id/navigation_profil"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/person_icon"
         android:title="@string/profil" />
 
 </menu>
