--- a/app/src/main/res/layout/activity_update_my_place.xml
+++ b/app/src/main/res/layout/activity_update_my_place.xml
@@ -67,6 +67,8 @@
         android:id="@+id/update_cameraButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Foto"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/BtnUpdateCategorie"
@@ -76,7 +78,8 @@
         android:id="@+id/update_galleryButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
         android:text="Galerie"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="@+id/update_cameraButton"
